--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
     <title>Nav bar</title>
     <!-- css -->
     <link rel="stylesheet" href="style.css" />
+    <!-- font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap"
+      rel="stylesheet"
+    />
+    <!-- icons -->
     <script
       src="https://kit.fontawesome.com/52b0a695e8.js"
       crossorigin="anonymous"
     ></script>
+    <script src="main.js" defer></script>
   </head>
   <body>
     <!-- navbar -->
@@ -28,11 +35,13 @@
         <li><a href="#">FAQ</a></li>
         <li><a href="#">Bookings</a></li>
       </ul>
-      <!-- navbar links-->
-      <ul class="navbar_links">
-        <i class="fab fa-twitter"></i>
-        <i class="fab fa-facebook-f"></i>
+      <!-- navbar icons-->
+      <ul class="navbar_icons">
+        <li><i class="fab fa-twitter"></i></li>
+        <li><i class="fab fa-facebook-f"></i></li>
       </ul>
+      <!-- toggle -->
+      <a href="#" class="navbar_toggleBtn"><i class="fas fa-bars"></i></a>
     </nav>
   </body>
 </html>
